--- a/src/app/pessoa/pesquisa-pessoas/pesquisa-pessoas.component.html
+++ b/src/app/pessoa/pesquisa-pessoas/pesquisa-pessoas.component.html
@@ -81,7 +81,8 @@
                     <td class="col-2">{{pessoa.foneCelular}}</td>
                     <td class="col-2">{{pessoa.cpf}}</td>
                     <td class="col-2 text-center">
-                      <a class="btn  btn-link  btn-xs" title="Editar" href="#"> 
+                      <a class="btn  btn-link  btn-xs" title="Editar" 
+                        [routerLink]="['/pessoas', pessoa.id]">
                         <i class="glyphicon glyphicon-pencil"></i>
                       </a>
                       <a class="btn  btn-link  btn-xs js-excluir-btn" title="Excluir" href="">
