Order of Document

--- a/src/app/core/sidebar-left/sidebar-left.component.html
+++ b/src/app/core/sidebar-left/sidebar-left.component.html
@@ -44,6 +44,7 @@
           </a>
           <ul class="treeview-menu">
             <li routerLinkActive="active"><a [routerLink]="['/pessoas/nova']"><i class="fa fa-circle-o"></i> Nova pessoa</a></li>
+            <li routerLinkActive="active"><a [routerLink]="['/documentos/novo']"><i class="fa fa-circle-o"></i> Novo documento</a></li>
           </ul>
         </li>
       </ul>
