--- a/src/app/pessoa/pesquisa-pessoas/pesquisa-pessoas.component.html
+++ b/src/app/pessoa/pesquisa-pessoas/pesquisa-pessoas.component.html
@@ -39,23 +39,21 @@
                 <div class="col-sm-4  form-group">
                   <label for="pseudonimo" class="control-label">Pseudônimo</label> 
                   <input id="pseudonimo" type="text" size="50" maxlength="50" class="form-control"
-                    placeholder="Pesquisar por pseudônimo" />
+                    placeholder="Pesquisar por pseudônimo" name="pseudonimo" ngModel [(ngModel)]="filter.pseudonimo" />
                 </div>
                 
                 <div class="col-sm-2  form-group">
                   <label for="nome" class="control-label">CPF</label> 
-                  <input id="nome" type="text" size="20" maxlength="20" class="form-control js-cpf" 
-                    placeholder="Pesquisar por CPF" />
+                  <input id="nome" type="text" size="20" maxlength="20" class="form-control" 
+                    placeholder="Pesquisar por CPF" name="cpf" ngModel [(ngModel)]="filter.cpf" />
                 </div>
               </div>
               
               <!-- /.box-body -->
               <div class="box-footer">
-                <button class="btn  btn-primary" (click)="filtrar()" [disabled]="form.invalid" type="submit">Pesquisar</button>
+                <button class="btn  btn-primary" (click)="search()" type="submit">Pesquisar</button>
               </div>
-            </form>
-
-           
+            </form>           
           
             <div class="table-responsive">
               <table class="table table-bordered table-hover">
