--- a/src/app/documento/pesquisa-documentos/pesquisa-documentos.component.html
+++ b/src/app/documento/pesquisa-documentos/pesquisa-documentos.component.html
@@ -72,13 +72,10 @@
                     <td>{{doc.nome}}</td>
                     <td>{{doc.descricao}}</td>
                     <td class="text-center">
-                      <a class="btn  btn-link  btn-xs" title="Editar"
-                        [routerLink]="['/documentos', doc.id]">
-                        <i class="glyphicon glyphicon-pencil"></i>
-                      </a>
-                      <a class="btn  btn-link  btn-xs" title="Excluir">
-                        <i class="glyphicon glyphicon-remove"></i>
-                      </a>
+                      <button class="btn customBtn" [routerLink]="['/documentos', doc.id]">
+                          <span class="glyphicon glyphicon-pencil"></span>
+                      </button>                    
+                      <npj-modal-remove (deleteFun)="remove($event)" [id]="doc.id"></npj-modal-remove>                        
                     </td>
                   </tr>
                   <tr *ngIf="!documentos?.length">
@@ -101,5 +98,5 @@
         </div>
       </div>
     </div>
-    </section>		
+  </section>		
 </div>
