--- a/src/app/pessoa/pesquisa-pessoas/pesquisa-pessoas.component.html
+++ b/src/app/pessoa/pesquisa-pessoas/pesquisa-pessoas.component.html
@@ -78,14 +78,10 @@
                     <td class="col-2">{{pessoa.foneCelular}}</td>
                     <td class="col-2">{{pessoa.cpf}}</td>
                     <td class="col-2 text-center">
-                      <a class="btn  btn-link  btn-xs" title="Editar" 
-                        [routerLink]="['/pessoas', pessoa.id]">
-                        <i class="glyphicon glyphicon-pencil"></i>
-                      </a>
-                      <a class="btn  btn-link  btn-xs js-excluir-btn" title="Excluir" 
-                        href="javascript:;" (click)="remove(pessoa.id)" >
-                        <i class="glyphicon glyphicon-remove"></i>
-                      </a>
+                      <button class="btn customBtn"  [routerLink]="['/pessoas', pessoa.id]">
+                        <span class="glyphicon glyphicon-pencil"></span>
+                      </button>  
+                      <npj-modal-remove (deleteFun)="remove($event)" [id]="pessoa.id"></npj-modal-remove>
                     </td>
                   </tr>
                   <tr *ngIf="!pessoas?.length">
