--- a/src/app/shared/modal-confirmation/modal-confirmation.component.html
+++ b/src/app/shared/modal-confirmation/modal-confirmation.component.html
@@ -1,20 +1,20 @@
-<div class="modal fade" id="delete_object{{id}}" role="dialog">
+<div class="modal fade" id="confirmation_object" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header modal_header_color">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Confirmação de exclusão</h4>
+        <h4 class="modal-title">Confirmação de assistido</h4>
       </div>
       <div class="modal-body">
         <div class="row margin_both">
           <div class="col-md-12">
             <div class="row form-group text-center">
-              <span>Você tem certeza que deseja realizar essa exclusão</span>
+              <span>Você tem certeza que deseja transformar fulano de tal em assistido</span>
             </div>
             <div class="row form-group">
               <div class="text-center">
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-danger" (click)="deleteFunction()" data-dismiss="modal">Delete</button>
+                <button type="button" class="btn btn-danger" (click)="save()" data-dismiss="modal">Transformar em assistido</button>
               </div>
             </div>
           </div>
@@ -24,6 +24,6 @@
   </div>
 </div>
 
-<button class="btn customBtn" data-toggle="modal" attr.data-target="#delete_object{{id}}" *ngIf='!lg'>
+<button class="btn customBtn" data-toggle="modal" attr.data-target="#confirmation_object">
   <span class="glyphicon glyphicon-trash"></span>
 </button>
