--- a/src/app/assistido/cadastro-assistido/cadastro-assistido.component.html
+++ b/src/app/assistido/cadastro-assistido/cadastro-assistido.component.html
@@ -31,7 +31,7 @@
       </div>
       <!-- /.box-header -->
         
-      <form novalidate>
+      <form #form="ngForm" novalidate>
         <div class="box-body">
         
           <div class="row">												
@@ -39,11 +39,11 @@
               <label for="nomePessoa" class="control-label">Nome</label> 
               <div class="input-group">							
                   <input type="text" readonly="readonly" class="form-control" 
-                    placeholder="Clique na lupa para pesquisar uma pessoa" [value]="pessoa?.nome" />
-                    <input type="hidden" >
+                    placeholder="Clique na lupa para pesquisar uma pessoa" [value]="assistido.pessoa?.nome" />
+                    <input type="hidden" name="pessoa" ngModel [(ngModel)]="assistido.pessoa" required >
                     <span class="input-group-btn">
                       <button class="btn  btn-default" type="button" title="Pesquisa avançada"
-                        data-toggle="modal" data-target="#pesquisaRapidaPessoas">
+                        data-toggle="modal" data-target="#">
                           <i class="glyphicon  glyphicon-search"></i>
                       </button>
                     </span>
@@ -53,7 +53,7 @@
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
-          <button class="btn  btn-primary" type="submit">Salvar</button>
+          <button [disabled]="form.invalid" class="btn  btn-primary" (click)="save(form)" type="submit">Salvar</button>
           <a href="javascript:;"  class="btn btn-info" role="button">Novo assistido</a> 
         </div>
       </form>
