--- a/src/app/pessoa/cadastro-pessoa/cadastro-pessoa.component.html
+++ b/src/app/pessoa/cadastro-pessoa/cadastro-pessoa.component.html
@@ -33,7 +33,7 @@
       <!-- /.box-header -->
 
       <div class="box-body">
-        <form [formGroup]="formulario" novalidate>				
+        <form [formGroup]="form" novalidate>				
         
           <div class="row">              
             <npj-input-content for="nome" label="Nome" errorMessage="Nome deve ser informado">               
@@ -156,7 +156,6 @@
           </div>
           
           <div formGroupName="endereco">
-
             <div class="row">
                 <npj-input-content for="logradouro" label="Logradouro" errorMessage="Logradouro deve ser informado">
                   <input id="logradouro" type="text" size="100" maxlength="100" formControlName="logradouro" class="form-control"
@@ -179,27 +178,23 @@
             </div>
             
             <div class="row">
-              <div class="form-group  col-sm-12" formGroupName="estado">
-                <label class="control-label">Estado</label>           
-                <select class="form-control" formControlName="id" (change)="findAllCidadesBy($event.target.value)">
-                  <option value="">Selecione um estado</option>
-                  <option *ngFor="let estado of estados" value="{{estado.id}}">{{estado.nome}}</option>
-                </select>
-              </div>            
+              <npj-input-content formGroupName="estado" for="estado" label="Estado" errorMessage="Estado deve ser informado">
+                  <npj-select [options]="estados" formControlName="id" (change)="findAllCidadesBy($event.target.value)"></npj-select>
+              </npj-input-content>
+
+              <!-- <div class="form-group  col-sm-12" formGroupName="estado">
+                  <label class="control-label">Estado</label>           
+                  <select class="form-control" formControlName="id" (change)="findAllCidadesBy($event.target.value)">
+                    <option value="">Selecione um estado</option>
+                    <option *ngFor="let estado of estados" value="{{estado.id}}">{{estado.nome}}</option>
+                  </select>
+                </div>  -->        
             </div>
            
             <div class="row">
-              <!-- <npj-input-content formGroupName="cidade" for="cidade" label="Cidade" errorMessage="Cidade deve ser informado">
+              <npj-input-content formGroupName="cidade" for="cidade" label="Cidade" errorMessage="Cidade deve ser informado">
                 <npj-select [options]="cidades" formControlName="id"></npj-select>
-              </npj-input-content> -->
-
-              <div class="form-group  col-sm-12" formGroupName="cidade">
-                <label class="control-label">Cidade</label>         
-                <select class="form-control" formControlName="id">
-                  <option value="">Selecione uma cidade</option>
-                  <option *ngFor="let cidade of cidades" value="{{cidade.id}}">{{cidade.nome}}</option>
-                </select>
-              </div>
+              </npj-input-content>
             </div>           
           </div>
 
@@ -231,8 +226,8 @@
         </div>
         <!-- /.box-body -->
         <div class="box-footer">         
-          <button [disabled]="formulario.invalid" type="submit" (click)="salvar(formulario.value)" class="btn  btn-primary">Salvar</button>
-          <button [disabled]="!formulario.get('id').value" type="submit" (click)="transferToAssistido()" class="btn  btn-primary">Gerar assistido</button>              
+          <button [disabled]="form.invalid" type="submit" (click)="salvar(form.value)" class="btn  btn-primary">Salvar</button>
+          <button [disabled]="!form.get('id').value" type="submit" (click)="transferToAssistido()" class="btn  btn-primary">Gerar assistido</button>              
           <a [routerLink]="['/pessoas/nova']" class="btn btn-info" role="button">Nova pessoa</a>
         </div>
     </div>
