--- a/src/app/shared/select/select.component.html
+++ b/src/app/shared/select/select.component.html
@@ -1,4 +1,4 @@
 <select class="form-control" (change)="setValue($event.target.value)">
-    <option value="">Selecione um estado</option>
+    <option value="">Selecione</option>
     <option *ngFor="let option of options" value="{{option.id}}">{{option.nome}}</option>
 </select>
