--- a/src/app/shared/pagination/pagination.component.html
+++ b/src/app/shared/pagination/pagination.component.html
@@ -1,7 +1,7 @@
 <nav>
   <ul class="pagination">
     <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-    <li *ngFor="let p of totalPages; let i = index" class="deep-purple darken-4" [class.active]="page === i">
+    <li *ngFor="let p of totalPages; index as i" class="deep-purple darken-4" [class.active]="page === i">
       <a href="javascript:;" (click)="setPage(i, $event)">{{i+1}}</a>
     </li>
     <li class="page-item"><a class="page-link" href="#">Next</a></li>
