Create componente of funcionario

--- a/src/app/core/sidebar-left/sidebar-left.component.html
+++ b/src/app/core/sidebar-left/sidebar-left.component.html
@@ -45,6 +45,7 @@
           <ul class="treeview-menu">
             <li routerLinkActive="active"><a [routerLink]="['/pessoas/nova']"><i class="fa fa-circle-o"></i> Nova pessoa</a></li>
             <li routerLinkActive="active"><a [routerLink]="['/documentos/novo']"><i class="fa fa-circle-o"></i> Novo documento</a></li>
+            <li routerLinkActive="active"><a [routerLink]="['/funcionarios/novo']"><i class="fa fa-circle-o"></i> Novo funcionário</a></li>
           </ul>
         </li>
       </ul>
