--- a/src/app/documento/pesquisa-documentos/pesquisa-documentos.component.html
+++ b/src/app/documento/pesquisa-documentos/pesquisa-documentos.component.html
@@ -84,15 +84,8 @@
                 </tbody>
               </table>
             </div>
-            
-            <nav aria-label="Page navigation example">
-              <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                <li *ngFor="let p of totalPages; index as i" class="page-item"><a class="page-link" href=""
-                  (click)="setPage(i, $event)" [class.active]="i === filter.page">{{i+1}}</a></li>
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
-              </ul>
-            </nav>
+
+            <npj-pagination [totalPages]="totalPages" (addEvent)="setPage($event)" [page]="filter.page"></npj-pagination>
             
           </div>
         </div>
