--- a/src/app/funcionario/cadastro-funcionario/cadastro-funcionario.component.html
+++ b/src/app/funcionario/cadastro-funcionario/cadastro-funcionario.component.html
@@ -44,7 +44,7 @@
           <div class="row">
             <div class="form-group  col-sm-12">
               <label class="control-label" for="bairro">Função</label> 
-              <input type="text" class="form-control" size="100" maxlength="100" name="funcao" ngModel [(ngModel)]="funcao" autocomplete="off" />
+              <input type="text" class="form-control" size="100" maxlength="100" name="funcao" ngModel [(ngModel)]="funcionario.funcao" autocomplete="off" />
             </div>
           </div>
         </div>
